--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@netlify/functions": "^1.6.0",
+    "@types/netlify-identity-widget": "^1.9.3"
   }
 }
